Remove credentials file from creation directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 credentials
-creation/gke_credentials.tf
+creation/gke/container_cluster/gke_credentials.tf
 
 # Local .terraform directories
 **/.terraform/*
@@ -30,3 +30,5 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+.DS_STORE
